--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,1 +1,16 @@
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: "Playfair Display";
+}
+
+input {
+    outline: none;
+}
+
+input:focus {
+    border: 2px solid lightblue;
+}
+
 
